Force add missing folders